--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "sigmoid": "0.0.1",
     "sigmoid-prime": "0.0.1",
     "htan-prime": "0.0.1",
-    "htan": "0.0.2"
+    "htan": "0.0.2",
+    "node-matrix": "~0.1.1"
   }
 }
