--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "sigmoid-prime": "0.0.1",
     "htan-prime": "0.0.1",
     "htan": "0.0.2",
-    "node-matrix": "~0.1.1"
+    "node-matrix": "~0.1.1",
+    "samples": "0.0.2"
   }
 }
