--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "htan-prime": "0.0.1",
     "htan": "0.0.2",
     "node-matrix": "~0.1.1",
-    "samples": "0.0.2"
+    "samples": "0.0.2",
+    "babel": "~6.5.2"
   }
 }
